[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ascii-translator_Arsined"
version = "0.1"
authors = [{name = "Arsined"}]
description = "Translator of pixels into symbols"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    'windows-curses',
    'numpy',
    'pyautogui',
    'Pillow',
    'keyboard',
    'pywin32',
    'screeninfo'
]

[project.urls]
"Homepage" = "https://github.com/Arsined/ascii-translator"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ascii-translator_Arsined*"]